# fastapi_chat_app

./: .env_example  Dockerfile  Readme.md  pyproject.toml
docker_compose/: app.yaml
src/: __main__.py
src/api/: __init__.py  setup.py
src/api/v1/endpoints/: __init__.py  healthcheck.py  setup.py
src/broker/kafka/: __init__.py  connection.py  manager.py
src/common/dto/: __init__.py
src/core/: __init__.py  settings.py
src/core/server/: __init__.py  uvicorn_server.py
src/services/common/converters/: __init__.py  kafka.py
src/services/kafka/: producer.py
